# Layhe

./: .gitignore  README.md
Agents_Cursor_Files/: 1e8dd72b-80922152d622bdd4.js.indir  27aea674-5aed778354581c2a.js.indir  3490e2a53d712ef5.css  48dbf63e63ba9c86.css  54a3554e3b79f998.css  84c363bae850488f.css  8bad7e02-a9cebdec3a6141b6.js.indir  9593-5c4dadff9eaae263.js.indir  README.md  SKILL.md  b3338dbcfa866678.css  b5d513c6-4415bf4a09d5be46.js.indir  cecfc53edd069652.css  e306ef3004006a7b.css  main-app-1b0aff802497d527.js.indir  webpack-0ed3485018f45519.js.indir
Backend/: README.md  SKILL.md
Backend/accounts/: admin.py  forms.py  models.py  urls.py  views.py
Backend/accounts/migrations/: 0001_initial.py
Backend/config/: settings.py
Broen/: Bosluq.md  README.md  SKILL.md  my_project.md
Broen/broen_lab_backend/: .gitignore  LAYIHE_TAMAMLANDI.md  PROJECT_REPORT.md  QUICK_START.md  README.md  manage.py  requirements.txt  test_api.py
Broen/broen_lab_backend/broen_lab/: asgi.py  settings.py  urls.py  wsgi.py
Broen/broen_lab_backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
Broen/broen_lab_backend/core/: admin.py  models.py  serializers.py  test_views.py  urls.py  views.py
Broen/broen_lab_backend/templates/: base.html  home.html  home_simple.html  test.html
Broen/broen_lab_backend/tests/: admin.py  models.py  serializers.py  urls.py  views.py
C_NASM_Project/: Git.md
C_Project_2/: README.md  main.py  requirements.txt
C_Project_2/cpp_blockchain/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  IZAH.md  Makefile  PILLAN.md  README.md  Transaction.cpp  Transaction.hpp  Wallet.cpp  Wallet.hpp  main.cpp  run.bat
C_project/: Documentation.md  README.md  c_caller.c  python_caller.py
C_project/asm_module/: square.asm  square.c
C_project/c_module/: math_ops.c  math_ops.h
Certificate_Exam/: Docmation_Sertifa.md  Meslehet.md  məsləhət.md
Cursor_Project/: Docmation.md  index.html  script.js  seller-dashboard.html  seller-script.js  seller-styles.css  styles.css
DataManagement/: Backend.md  Pillan.md  copy.md  demo.md  main.css  main.html  main.js  run.md  run.py  terminal.md
DeepSeek_Code_AI/ollama/: CMakeLists.txt
Experience/: Makefile  README.md  main.c
Experience/Claude/agents.plan/: agents.md
Experience/agents/claude_sonnet/: claude_agent.c  claude_agent.h
Experience/agents/xususi_agent/: xususi_agent.c  xususi_agent.h
Experience/include/: common.h
Experience/kernel/: core.c  core.h  memory.c  memory.h  scheduler.c  scheduler.h
Experience/microcode/: instruction_set.c  instruction_set.h  microcode.c  microcode.h
Flask_Framework_2/: flask.md  index.html  izah.md  izah2.md  yuarls.md
Flask_Framework_2/new folder/: Deris.md  about.html
GPU_Project/Layihe/: Layihe.md
GPU_Project/Layihe/Planlama/: ideya.md  implementation_checklist.md  layihe_plani.md  layihe_plani_revised.md  tech_stack_comparison.md  texniki_plan.md  tkinter_plan.md
GPU_Project/Layihe/tkinter-app/: README.md  main.py  requirements.txt
GPU_Project/OOP/: run.py
GPU_Project/Procekt1/: Makefile  PROJECT_PLAN.md  README.md
GPU_Project/Procekt1/kernel/: display.h  kernel.cpp
GPU_Project/Program_/: cpp_kitabxanalar.md  layhe.md  layhe_pillani.md
GPU_Project/Program_/Tedbiq/: .gitignore  CMakeLists.txt  README.md
GPU_Project/Program_/Tedbiq/include/: Application.h
GPU_Project/Program_/Tedbiq/src/: main.cpp
GPU_Project/Program_/Tedbiq/src/core/: Application.cpp
Java/: BAŞLANĞIC.md  JAVA_SETUP.md  Pıllan.java  Pıllan.md  check_java.bat  main.java  setup_java.ps1  test_script.py
Khayyam/: 04_07_2025  Xeyyam
New_File/: Makefile  main.cpp
New_Folder_Design/: BUILD_INSTRUCTIONS.md  PLAN.md  README.md  README_CPP.md  cpp_compiler_concepts.cpp  procekt_python.md  pıllan_compiler.md  İCRA_PLANI.md
New_Folder_Design/docs/: texniki-spesifikasiya.md
New_Folder_Project/: SETUP_GUIDE.md
New_Project/: Layhe.md  run.py
New_Project/pillan_yaratmaq.md/: CPP_Qurulum_Pillani.md
New_Project/pillan_yaratmaq.md/Layhepillan/: README.md  TypeScript_Praktik_Baslangic.md  TypeScript_Qurulum_Pillani.md  TypeScript_Surətli_Məlumat.md
New_Project_2/: Apps.md
Programming/D01/: xeyyam.py
Project/App/: app.md  go.mod  schema.sql  ui.go
Project/App/cpp_files/: CMakeLists.txt  core.cpp  core.h  main.cpp
Project/Attachments/: Pıllan.md  VScode.md
Project/Telebe/Telebe_1/: README.md  alu.py  alu_bynari_adder.txt  cpu_core_demo-asm.md  cpu_simulator.py  demo.py  instruction_set.py  quick_start.py  register_state.txt  requirements.txt  summary.txt
Project/Telebe/Telebe_Frontend/: PROJECT_STATUS.md
Project/Telebe/Telece.prayekt/: pilan.md  plan1.2.md  plan1.md
Project/VScode_cod/: check_packages.py  pytorch_image_generator.py
Project/Yeni klasör_proje/: COMPILE_COMMANDS.md  main.cpp
Project/Yeni_C_Nasm/: README.md  main.nasm
Project/Yeni_C_Nasm/Yeni-layhe/: Meslehet.md  (+1 more)
Project/Yeni_fayil/: portfolio-tools-explanation.md
Python_Lessons/: Python terminal.txt
Python_Scripts/: requirements.txt
Python_Scripts/docs/: README.md
Python_Scripts/src/cpp/: CMakeLists.txt  bindings.cpp  calculator.cpp  calculator.h
Python_Scripts/tests/: Main.java  test_cpp.cpp  test_python.py
Restaurant/: readme.md
Restaurant/RestoranDesktopPy/: Main2.py  Main3.py  README.md  TEXNIKI_TAPŞIRIQ.md  git_github.md  main.py  main1.py  requirements.txt  run.py  run2.py  run3.py
Rules/: CMakeLists.txt  InstallationLog.txt  hello.cpp  main.cpp
Student_Backend/: requirements.txt
VSCode_Code/: EXAMPLES.md  INSTALL_GUIDE.md  README.md  TENSORFLOW_LITE_CODE.md  requirements.txt  tensorflow_lite_image_generator.py  test_tflite.py
java-compiler-analyzer/include/: CompilerAnalyzer.h  JavaAnalyzer.h  OutputFormatter.h
user-profile-js/java-compiler-analyzer/: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
user-profile-js/java-compiler-analyzer/include/: CompilerAnalyzer.h  JavaAnalyzer.h  OutputFormatter.h  missing_include.h
user-profile-js/java-compiler-analyzer/src/: CompilerAnalyzer.cpp  JavaAnalyzer.cpp  OutputFormatter.cpp
(+23 files in other folders)
